test_data/typeerror/ansible-81700.py
_validate_mutable_mappings(a, b)
result = a | b
